# tt

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  tasks.md
requirements/: base.txt
src/: cli.py  create_db.py  main.py
src/core/: config.py  rich_table.py  utils.py
src/crud/: repository.py  task_repository.py
src/domain/: task.py
src/infrastructure/db/: session.py
src/models/: task_model.py
src/services/: task_service.py
tests/: conftest.py  test_task.py
