[tool.poetry]
name = "task-t"
version = "0.1.0"
description = ""
authors = ["athayr <athayyr.leite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
psycopg2 = "^2.9.9"
typer = "^0.12.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
blue = "^0.9.1"
httpx = "^0.27.2"
isort = "^5.13.2"
faker = "^28.1.0"
asgi-lifespan = "^2.1.0"
pytest-sugar = "^1.0.0"
ipdb = "^0.13.13"
mypy = "^1.11.2"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.34"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings"
asyncio_mode = "auto"

[tool.isort]
profile = 'black'
line_length = 79

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
 ]


[tool.taskipy.tasks]
format = 'blue .  && isort .'
lint = 'blue --check . --diff && isort --check . --diff'
test = 'pytest --cov-report=term-missing --cov=src tests'
doc = 'mkdocs serve'
